fixed modal padding on mobile view

--- a/blocks/modal.css
+++ b/blocks/modal.css
@@ -67,6 +67,7 @@
 
   .modal__container {
     margin: 0 auto;
+    padding: 25px 22px;
   }
 
   .modal__header {
